<resources>
    <string name="app_name">Warehouse Inventory App</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="frozen_item">Frozen Item?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_item">Add New Item</string>
    <string name="clear_all">Clear All Items</string>
</resources>
